--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -22,16 +22,10 @@
             </nav>
             <div id = "coding_journey">
                 <p>
-                Let's start
-                </p>
-                <p>
-                our coding
-                </p>
-                <p>
-                journey
-                </p>
-                <p>
-                together.
+                    Let's start<br>
+                    our coding<br>
+                    journey <br>
+                    together.<br>
                 </p>
             </div>
         <div id = "homecode">
@@ -41,59 +35,65 @@
                 Bacon swine leberkas, ham hock flank beef venison pork belly...
             </p>
             <p>
-                <mark id="ellipsis">...</mark>
+                <mark id="ellipsis">. . .</mark>
             </p>
         </section>
         <main>
             <div id="main">
-                <article class = "project">
+                <div class = "headline">
                     <h3>I'm not going anywhere.</h3>
+                </div>
+                <div class = "project">
                     <p>
                     Skate ipsum dolor sit amet, betty boneless judo air hanger griptape.
                     Sketchy risers boned out boardslide Bill Danforth gap. Camel back
                     bigspin 360 Japan air fastplant. Wes Humpton. Aerial mute-air Gator
                     crailtap blunt deck.
                     </p>
-                </article>
-                <figure class = "photo">
-                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
-                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
-                        width="200">
-                    </a>
-                </figure>
-                <article class = "project">
+                    <figure class = "photo">
+                        <a href="pexels-goumbik-574071.jpg">
+                            <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
+                        width="300">
+                        </a>
+                    </figure>
+                </div>
+                <div class = "headline">
                     <h3>A writer in eerie plastic.</h3>
+                </div>
+                <div class = "project">
                     <p>
                     Megamouth shark sand lance fathead sculpin sand dab kanyu; barramundi
                     dory ocena perch noodlefish saber-toothed blenny Black triggerfish?
                     Rainbow trout, "lamprey, longjaw mudsucker, amur pike harelip sucker."
                     </p>
-                </article>
-                <figure class = "photo">
-                    <a href="pexels-goumbik-574071.jpg">
-                        <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
-                        width="200">
-                    </a>
-                </figure>
-                <article class = "project">
+                    <figure class = "photo">
+                        <a href="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg">
+                            <img src="https://zyobot101.github.io/se1400/milestone4/pexels-jorgeromeroortiz-27115293.jpg" alt="Tic-Tac-Toe Game"
+                        width="300">
+                        </a>
+                    </figure>
+                </div>
+                <div class = "headline">
                     <h3>Come along, Pond.</h3>
+                </div>
+                <div class = "project">
                     <p>
                     Extraordinary hand-crafted Toto remarkable Helsinki Fast Lane. The
                     highest quality Ginza international bureaux K-pop Gaggenau hand-crafted
                     Winkreative Muji Lufthansa efficient.
                     </p>
-                </article>
-                <figure class = "photo">
-                    <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
-                        <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
-                        width="200">
-                    </a>
-                </figure>
+                    <figure class = "photo">
+                        <a href="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg">
+                            <img src="https://zyobot101.github.io/se1400/milestone4/pexels-picjumbo-com-55570-196650.jpg" alt="Tablet and Keyboard"
+                        width="300">
+                        </a>
+                    </figure> 
+                </div>               
             </div>
         </main>
         <footer>
-            Copyright &copy; 2025 <b></b>
-            <a href="mailto:ethan.lee1@utahtech.edu">ethan.lee1@utahtech.edu</a>
+            Copyright &copy; 2025
+            <a href="mailto:ethan.lee1@utahtech.edu"><br></br>ethan.lee1@utahtech.edu</a>
         </footer>
     </div>
 </body>
