--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -93,7 +93,7 @@
         </main>
         <footer>
             Copyright &copy; 2025
-            <a href="mailto:ethan.lee1@utahtech.edu"><br></br>ethan.lee1@utahtech.edu</a>
+            <a href="mailto:ethan.lee1@utahtech.edu"><br><mark id="email">ethan.lee1@utahtech.edu</mark></a>
         </footer>
     </div>
 </body>
