Nixed redundant "headline" class.

--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -40,7 +40,7 @@
         </section>
         <main>
             <div id="main">
-                <div class = "headline">
+                <div>
                     <h3>I'm not going anywhere.</h3>
                 </div>
                 <div class = "project">
@@ -57,7 +57,7 @@
                         </a>
                     </figure>
                 </div>
-                <div class = "headline">
+                <div>
                     <h3>A writer in eerie plastic.</h3>
                 </div>
                 <div class = "project">
@@ -73,7 +73,7 @@
                         </a>
                     </figure>
                 </div>
-                <div class = "headline">
+                <div>
                     <h3>Come along, Pond.</h3>
                 </div>
                 <div class = "project">
