--- a/utahtech6/alumni.html
+++ b/utahtech6/alumni.html
@@ -52,9 +52,7 @@
                 <label for="myComments">*Comments:</label>
                     <textarea name="myComments" rows="2" cols="20" id="myComments" required></textarea>
 
-                <button type="button" name="mySubmit" id="mySubmit" value="Submit">
-                    <label for="mySubmit">Submit</label>
-                </button>
+                <button type="button" name="mySubmit" id="mySubmit" value="Submit">Submit</button>
             </form>
             Copyright &copy; 2025 Utah Tech University<br>
             <a href="mailto:ethan.lee1@utahtech.edu">ethan.lee1@utahtech.edu</a>
