--- a/utahtech6/alumni.html
+++ b/utahtech6/alumni.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Utah Tech University</title>
+    <title>Utah Tech University :: Alumni</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport"
