--- a/utahtech6/students.html
+++ b/utahtech6/students.html
@@ -15,7 +15,7 @@
         <div id="bluebar"></div>
         <div id="greybar"></div>
         <header>
-            <h1><a href="index.html">Utah Tech University</a></h1>
+            <h1><a href="alumni.html">Utah Tech University</a></h1>
         </header>
         <nav>
             <ul>
