--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li><a href="https://zyobot101.github.io/se1400/utahtech5/index.html">Utah Tech 5</a></li>
             <li><a href="https://zyobot101.github.io/se1400/utahtech6/alumni.html">Utah Tech 6</a></li>
             <li><a href="https://zyobot101.github.io/se1400/utahtech7/alumni.html">Utah Tech 7</a></li>
-            <li><a href="utahtech8/index.html">Utah Tech 8</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/utahtech8/index.html">Utah Tech 8</a></li>
             <li><a href="utahtech9/index.html">Utah Tech 9</a></li>
             <li><a href="utahtech10/index.html">Utah Tech 10</a></li>
         </ul>
