--- a/utahtech6/alumni.html
+++ b/utahtech6/alumni.html
@@ -5,8 +5,7 @@
     <title>Utah Tech University :: Alumni</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -28,34 +27,33 @@
         <div id="alumnihero"></div>
         <main>
             <h2>Join Alumni Mailing List</h2>
-                <h3>Request Alumni Newsletter</h3>
+            <h3>Request Alumni Newsletter</h3>
             <p>Required information is marked with an asterisk (*).</p>
-            <form action="https://kearl.net/se1400/mail.php" method="post" id="form"
-            autocomplete="off" name="formcontrol">
+            <form action="https://kearl.net/se1400/mail.php" method="post" id="form" autocomplete="off" name="formcontrol">
                 <label for="myFName">*First Name:</label>
-                    <input type="text" name="myFName" id="myFName" required>
+                <input type="text" name="myFName" id="myFName" required>
 
                 <label for="myLName">*Last Name:</label>
-                    <input type="text" name="myLName" id="myLName" required>
+                <input type="text" name="myLName" id="myLName" required>
 
-                <label for="myEmail">*E-mail:</label>
-                    <input type="email" name="myEmail" id="myEmail" required>
+                <label for="email">*E-mail:</label>
+                <input type="email" name="email" id="email" required>
 
-                <label for="myPhone">Phone:</label>
-                    <input type="tel" name="myPhone" id="myPhone">
+                <label for="phone">Phone:</label>
+                <input type="tel" name="phone" id="phone">
 
-                <label for="myDate">Graduation Date:</label>
-                    <input type="date" name="myDate" id="myDate">
+                <label for="myGradDate">Graduation Date:</label>
+                <input type="date" name="myGradDate" id="myGradDate">
 
                 <label for="myComments">*Comments:</label>
-                    <textarea name="myComments" rows="2" cols="20" id="myComments" required></textarea>
-
-                <button type="button" name="mySubmit" id="mySubmit" value="Submit">Submit</button>
+                    <textarea name="myComments" id="myComments" rows="2" cols="20" required></textarea>
+                
+                <button type="submit" name="submit" id="mySubmit" value="submit">Submit</button>
             </form>
         </main>
         <footer>
-            Copyright &copy; 2025 Utah Tech University<br>
-            <a href="mailto:ethan.lee1@utahtech.edu">ethan.lee1@utahtech.edu</a>
+            Copyright &copy; 2025 Utah Tech University
+            <a href="mailto:ethan.lee1@utahtech.edu"><br>ethan.lee1@utahtech.edu</a>
         </footer>
     </div>
 </body>
