Corrected divs and columns.

--- a/utahtech9/shop.html
+++ b/utahtech9/shop.html
@@ -29,106 +29,124 @@
         <main>
             <h2>Utah Tech Bookstore</h2>
                 <div id="shoppingcart">
-                    <img src="images/hoodie1.jpg" class="" alt="Heather grey hoodie with Utah Tech logo">
-                        <h3>Utah Tech Hoodie</h3>
-                        <p>Heather grey hoodie with Utah Tech logo</p>
-                        <p>$79.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="grey-hoodie"
-                            data-item-price="79.99"
-                            data-item-description="Heather grey hoodie with Utah Tech logo"
-                            data-item-image="images/hoodie1.jpg"
-                            data-item-name="Utah Tech Hoodie">
-                            Add to cart
-                        </button>
-                    <img src="images/hoodie2.jpg" class="" alt="Dark grey hoodie with Trailblazers' football logo">
-                        <h3>Utah Tech Football Hoodie</h3>
-                        <p>$89.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="dark-grey-hoodie"
-                            data-item-price="89.99"
-                            data-item-description="Dark grey hoodie with Trailblazers' football logo"
-                            data-item-image="images/hoodie2.jpg"
-                            data-item-name="Utah Tech Football Hoodie">
-                            Add to cart
-                        </button>
-                    <img src="images/hoodie3.jpg" class="" alt="Light grey hoodie with zipper and UT logo on right side">
-                        <h3>Utah Tech Zip Hoodie</h3>
-                        <p>$89.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="light-grey-hoodie"
-                            data-item-price="89.99"
-                            data-item-description="Light grey hoodie with zipper and UT logo on right side"
-                            data-item-image="images/hoodie3.jpg"
-                            data-item-name="Utah Tech Zip Hoodie">
-                            Add to cart
-                        </button>
-                    <img src="images/shirt1.jpg" class="" alt="Red T-shirt with Trailblazers' baseball logo">
-                        <h3>Utah Tech Baseball T-Shirt</h3>
-                        <p>$49.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="red-T-shirt"
-                            data-item-price="49.99"
-                            data-item-description="Red T-shirt with Trailblazers' baseball logo"
-                            data-item-image="images/shirt1.jpg"
-                            data-item-name="Utah Tech Baseball T-Shirt">
-                            Add to cart
-                        </button>
-                    <img src="images/shirt2.jpg" class="" alt="Grey T-shirt with Utah Tech founding date">
-                        <h3>Utah Tech Grey T-Shirt</h3>
-                        <p>$49.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="grey-T-shirt"
-                            data-item-price="49.99"
-                            data-item-description="Grey T-shirt with Utah Tech founding date"
-                            data-item-image="images/shirt2.jpg"
-                            data-item-name="Utah Tech Grey T-Shirt">
-                            Add to cart
-                        </button>
-                    <img src="images/shirt3.jpg" class="" alt="Navy T-shirt with Utah Tech soccer logo">
-                        <h3>Utah Tech Soccer T-Shirt</h3>
-                        <p>$49.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="navy-T-shirt"
-                            data-item-price="49.99"
-                            data-item-description="Navy T-shirt with Utah Tech soccer logo"
-                            data-item-image="images/shirt3.jpg"
-                            data-item-name="Utah Tech Soccer T-Shirt">
-                            Add to cart
-                        </button>
-                    <img src="images/shirt4.jpg" class="" alt="Off-white T-shirt with Utah Tech alumni logo">
-                        <h3>Utah Tech Alumni T-Shirt</h3>
-                        <p>$49.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="off-white-T-shirt"
-                            data-item-price="49.99"
-                            data-item-description="Off-white T-shirt with Utah Tech alumni logo"
-                            data-item-image="images/shirt4.jpg"
-                            data-item-name="Utah Tech Alumni T-Shirt">
-                            Add to cart
-                        </button>
-                    <img src="images/shirt5.jpg" class="" alt="Navy polo shirt with Utah Tech logo">
-                        <h3>Utah Tech Polo Shirt</h3>
-                        <p>$59.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="navy-polo-shirt"
-                            data-item-price="59.99"
-                            data-item-description="Navy polo shirt with Utah Tech logo"
-                            data-item-image="images/shirt5.jpg"
-                            data-item-name="Utah Tech Polo Shirt">
-                            Add to cart
-                        </button>
-                    <img src="images/shirt6.jpg" class="" alt="Red and Blue polyester shirt with Trailblazer's logo">
-                        <h3>Utah Tech Polyester Sports Shirt</h3>
-                        <p>$59.99</p>
-                        <button class="snipcart-add-item"
-                            data-item-id="polyester-sports-shirt"
-                            data-item-price="59.99"
-                            data-item-description="Red and Blue polyester shirt with Trailblazer's logo"
-                            data-item-image="images/shirt6.jpg"
-                            data-item-name="Utah Tech Polyester Sports Shirt">
-                            Add to cart
-                    </button>
+                    <div>
+                        <img src="images/hoodie1.jpg" class="" alt="Heather grey hoodie with Utah Tech logo">
+                            <h3>Utah Tech Hoodie</h3>
+                            <p>Heather grey hoodie with Utah Tech logo</p>
+                            <p>$79.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="grey-hoodie"
+                                data-item-price="79.99"
+                                data-item-description="Heather grey hoodie with Utah Tech logo"
+                                data-item-image="images/hoodie1.jpg"
+                                data-item-name="Utah Tech Hoodie">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/hoodie2.jpg" class="" alt="Dark grey hoodie with Trailblazers' football logo">
+                            <h3>Utah Tech Football Hoodie</h3>
+                            <p>$89.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="dark-grey-hoodie"
+                                data-item-price="89.99"
+                                data-item-description="Dark grey hoodie with Trailblazers' football logo"
+                                data-item-image="images/hoodie2.jpg"
+                                data-item-name="Utah Tech Football Hoodie">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/hoodie3.jpg" class="" alt="Light grey hoodie with zipper and UT logo on right side">
+                            <h3>Utah Tech Zip Hoodie</h3>
+                            <p>$89.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="light-grey-hoodie"
+                                data-item-price="89.99"
+                                data-item-description="Light grey hoodie with zipper and UT logo on right side"
+                                data-item-image="images/hoodie3.jpg"
+                                data-item-name="Utah Tech Zip Hoodie">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/shirt1.jpg" class="" alt="Red T-shirt with Trailblazers' baseball logo">
+                            <h3>Utah Tech Baseball T-Shirt</h3>
+                            <p>$49.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="red-T-shirt"
+                                data-item-price="49.99"
+                                data-item-description="Red T-shirt with Trailblazers' baseball logo"
+                                data-item-image="images/shirt1.jpg"
+                                data-item-name="Utah Tech Baseball T-Shirt">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/shirt2.jpg" class="" alt="Grey T-shirt with Utah Tech founding date">
+                            <h3>Utah Tech Grey T-Shirt</h3>
+                            <p>$49.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="grey-T-shirt"
+                                data-item-price="49.99"
+                                data-item-description="Grey T-shirt with Utah Tech founding date"
+                                data-item-image="images/shirt2.jpg"
+                                data-item-name="Utah Tech Grey T-Shirt">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/shirt3.jpg" class="" alt="Navy T-shirt with Utah Tech soccer logo">
+                            <h3>Utah Tech Soccer T-Shirt</h3>
+                            <p>$49.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="navy-T-shirt"
+                                data-item-price="49.99"
+                                data-item-description="Navy T-shirt with Utah Tech soccer logo"
+                                data-item-image="images/shirt3.jpg"
+                                data-item-name="Utah Tech Soccer T-Shirt">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/shirt4.jpg" class="" alt="Off-white T-shirt with Utah Tech alumni logo">
+                            <h3>Utah Tech Alumni T-Shirt</h3>
+                            <p>$49.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="off-white-T-shirt"
+                                data-item-price="49.99"
+                                data-item-description="Off-white T-shirt with Utah Tech alumni logo"
+                                data-item-image="images/shirt4.jpg"
+                                data-item-name="Utah Tech Alumni T-Shirt">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/shirt5.jpg" class="" alt="Navy polo shirt with Utah Tech logo">
+                            <h3>Utah Tech Polo Shirt</h3>
+                            <p>$59.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="navy-polo-shirt"
+                                data-item-price="59.99"
+                                data-item-description="Navy polo shirt with Utah Tech logo"
+                                data-item-image="images/shirt5.jpg"
+                                data-item-name="Utah Tech Polo Shirt">
+                                Add to cart
+                            </button>
+                    </div>
+                    <div>
+                        <img src="images/shirt6.jpg" class="" alt="Red and Blue polyester shirt with Trailblazer's logo">
+                            <h3>Utah Tech Polyester Sports Shirt</h3>
+                            <p>$59.99</p>
+                            <button class="snipcart-add-item"
+                                data-item-id="polyester-sports-shirt"
+                                data-item-price="59.99"
+                                data-item-description="Red and Blue polyester shirt with Trailblazer's logo"
+                                data-item-image="images/shirt6.jpg"
+                                data-item-name="Utah Tech Polyester Sports Shirt">
+                                Add to cart
+                            </button>
+                    </div>
                 </div>
         </main>
         <footer>
