--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li><a href="https://zyobot101.github.io/se1400/utahtech7/alumni.html">Utah Tech 7</a></li>
             <li><a href="https://zyobot101.github.io/se1400/utahtech8/index.html">Utah Tech 8</a></li>
             <li><a href="https://zyobot101.github.io/se1400/utahtech9/shop.html">Utah Tech 9</a></li>
-            <li><a href="utahtech10/index.html">Utah Tech 10</a></li>
+            <li><a href="https://zyobot101.github.io/se1400/utahtech10/alumni.html">Utah Tech 10</a></li>
         </ul>
         <h2>Final Project Milestones</h2>
         <ul>
