--- a/milestone6/index.html
+++ b/milestone6/index.html
@@ -46,12 +46,14 @@
                     <h3>Who am I?</h3>
                 </div>
                 <div class = "project">
-                    <p>
-                    Skate ipsum dolor sit amet, betty boneless judo air hanger griptape.
-                    Sketchy risers boned out boardslide Bill Danforth gap. Camel back
-                    bigspin 360 Japan air fastplant. Wes Humpton. Aerial mute-air Gator
-                    crailtap blunt deck.
-                    </p>
+                    <a href="about.html">
+                        <p>
+                        Skate ipsum dolor sit amet, betty boneless judo air hanger griptape.
+                        Sketchy risers boned out boardslide Bill Danforth gap. Camel back
+                        bigspin 360 Japan air fastplant. Wes Humpton. Aerial mute-air Gator
+                        crailtap blunt deck.
+                        </p>
+                    </a>
                     <figure class = "photo">
                         <a href="pexels-goumbik-574071.jpg">
                             <img src="pexels-goumbik-574071.jpg" alt="Man Working on Laptop"
