--- a/milestone6/contact.html
+++ b/milestone6/contact.html
@@ -38,13 +38,10 @@
             <p>
                 /* Change out form action to account for this! */
             </p>
-            <form action="https://kearl.net/se1400/mail.php" method="post" id="form"
-            autocomplete="off" name="formcontrol">
-                <label for="myFName">*First Name:</label>
-                    <input type="text" name="myFName" id="myFName" required>
+            <form action="https://zyobot101.github.io/se1400/milestone6/received.php" method="post" id="form" name="formcontrol">
 
-                <label for="myLName">*Last Name:</label>
-                    <input type="text" name="myLName" id="myLName" required>
+                <name for="myUsername">*Username:</label>
+                    <input type="name" name="myUsername" id="myUsername" required>
 
                 <label for="myEmail">*E-mail:</label>
                     <input type="email" name="myEmail" id="myEmail" required>
@@ -52,11 +49,9 @@
                 <label for="myPhone">Phone:</label>
                     <input type="tel" name="myPhone" id="myPhone">
 
-                <label for="myDate">Graduation Date:</label>
-                    <input type="date" name="myDate" id="myDate">
-
-                <label for="myComments">*Comments:</label>
-                    <textarea name="myComments" rows="2" cols="20" id="myComments" required></textarea>
+                <p>Wanna' drop a note? Speak your mind below!</p>
+                <label for="myMessage">Message:</label>
+                    <textarea name="myMessage" rows="2" cols="20" id="myMessage"></textarea>
 
                 <button type="button" name="mySubmit" id="mySubmit" value="Submit">Submit</button>
             </form>
