--- a/milestone6/contact.html
+++ b/milestone6/contact.html
@@ -36,7 +36,7 @@
         </section>
         <main>
             <p>
-                /* Change out form action to account for this! */
+                Following me and reading my blog is one thing, but reaching out to talk shop or discuss things one on one really gets the creative juices flowing. Please, feel free to message me!
             </p>
             <form action="https://zyobot101.github.io/se1400/milestone6/received.php" method="post" id="form" name="formcontrol">
 
@@ -51,7 +51,7 @@
 
                 <p>Wanna' drop a note? Speak your mind below!</p>
                 <label for="myMessage">Message:</label>
-                    <textarea name="myMessage" rows="2" cols="20" id="myMessage"></textarea>
+                    <textarea name="myMessage" rows="4" cols="40" id="myMessage"></textarea>
 
                 <button type="button" name="mySubmit" id="mySubmit" value="Submit">Submit</button>
             </form>
