--- a/milestone6/contact.html
+++ b/milestone6/contact.html
@@ -40,17 +40,21 @@
             </p>
             <form action="https://zyobot101.github.io/se1400/milestone6/received.php" method="post" id="form" name="formcontrol">
 
-                <name for="myUsername">*Username:</label>
+                <name for="myUsername">USERNAME:</label>
+                    <br>
                     <input type="name" name="myUsername" id="myUsername" required>
 
-                <label for="myEmail">*E-mail:</label>
+                <label for="myEmail">EMAIL:</label>
+                    <br>
                     <input type="email" name="myEmail" id="myEmail" required>
 
-                <label for="myPhone">Phone:</label>
+                <label for="myPhone">PHONE:</label>
+                    <br>
                     <input type="tel" name="myPhone" id="myPhone">
 
                 <p>Wanna' drop a note? Speak your mind below!</p>
-                <label for="myMessage">Message:</label>
+                <label for="myMessage">MESSAGE:</label>
+                    <br>
                     <textarea name="myMessage" rows="4" cols="40" id="myMessage"></textarea>
 
                 <button type="button" name="mySubmit" id="mySubmit" value="Submit">Submit</button>
