--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -35,25 +35,25 @@
             </p>
         </section>
         <main>
-            <section>
+            <div>
                 <h3>Who am I?</h3>
-            </section>
+            </div>
             <br>
-            <section>
+            <div>
                 <h3>Why did I post this site?</h3>
-            </section>
+            </div>
             <br>
-            <section>
+            <div>
                 <h3>What can you expect here?</h3>
-            </section>
+            </div>
             <br>
-            <section>
+            <div>
                 <h3>How does it work here?</h3>
-            </section>
+            </div>
             <br>
-            <section>
+            <div>
                 <h3>How can you contact me?</h3>
-            </section>
+            </div>
         </main>
         <footer>
             Copyright &copy; 2025
