--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -35,24 +35,26 @@
             </p>
         </section>
         <main>
-            <div>
-                <h3>Who am I?</h3>
-            </div>
-            <br>
-            <div>
-                <h3>Why did I post this site?</h3>
-            </div>
-            <br>
-            <div>
-                <h3>What can you expect here?</h3>
-            </div>
-            <br>
-            <div>
-                <h3>How does it work here?</h3>
-            </div>
-            <br>
-            <div>
-                <h3>How can you contact me?</h3>
+            <div id="main">
+                <div>
+                    <h3>Who am I?</h3>
+                </div>
+                <br>
+                <div>
+                    <h3>Why did I post this site?</h3>
+                </div>
+                <br>
+                <div>
+                    <h3>What can you expect here?</h3>
+                </div>
+                <br>
+                <div>
+                    <h3>How does it work here?</h3>
+                </div>
+                <br>
+                <div>
+                    <h3>How can you contact me?</h3>
+                </div>
             </div>
         </main>
         <footer>
