--- a/milestone6/contact.html
+++ b/milestone6/contact.html
@@ -40,7 +40,7 @@
             </p>
             <form action="https://zyobot101.github.io/se1400/milestone6/received.php" method="post" id="form" name="formcontrol">
 
-                <name for="myUsername">USERNAME:</label>
+                <label for="myUsername">USERNAME:</label>
                     <br>
                     <input type="name" name="myUsername" id="myUsername" required>
 
