--- a/milestone6/contact.html
+++ b/milestone6/contact.html
@@ -28,7 +28,7 @@
         </div>
         <section id = "middle_bar">
             <p>
-                Bacon swine leberkas, ham hock flank beef venison pork belly...
+                Wanna' chat? I gotcha' covered!
             </p>
             <p>
                 <mark id="ellipsis">. . .</mark>
