--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -28,7 +28,7 @@
         </div>
         <section id = "middle_bar">
             <p>
-                Bacon swine leberkas, ham hock flank beef venison pork belly...
+                Who? What? Why? Find the answers below!
             </p>
             <p>
                 <mark id="ellipsis">. . .</mark>
