--- a/milestone6/blog.html
+++ b/milestone6/blog.html
@@ -28,7 +28,7 @@
         </div>
         <section id = "middle_bar">
             <p>
-                Bacon swine leberkas, ham hock flank beef venison pork belly...
+                After finishing the coding projects, here's where I yap about it.
             </p>
             <p>
                 <mark id="ellipsis">. . .</mark>
