--- a/milestone6/projects.html
+++ b/milestone6/projects.html
@@ -28,7 +28,7 @@
         </div>
         <section id = "middle_bar">
             <p>
-                Bacon swine leberkas, ham hock flank beef venison pork belly...
+                And here's where all the games, puzzles, and projects lie. Have at it, folks!
             </p>
             <p>
                 <mark id="ellipsis">. . .</mark>
