--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -49,7 +49,7 @@
                 </div>
                 <br>
                 <div>
-                    <h3>How does it work here?</h3>
+                    <h3>How does this site work?</h3>
                 </div>
                 <br>
                 <div>
