Updated About page.

--- a/milestone6/about.html
+++ b/milestone6/about.html
@@ -36,23 +36,19 @@
         </section>
         <main>
             <div id="main">
-                <div>
+                <div class = "questions">
                     <h3>Who am I?</h3>
                 </div>
-                <br>
-                <div>
+                <div class = "questions">
                     <h3>Why did I post this site?</h3>
                 </div>
-                <br>
-                <div>
+                <div class = "questions">
                     <h3>What can you expect here?</h3>
                 </div>
-                <br>
-                <div>
+                <div class = "questions">
                     <h3>How does this site work?</h3>
                 </div>
-                <br>
-                <div>
+                <div class = "questions">
                     <h3>How can you contact me?</h3>
                 </div>
             </div>
