Added more changes.

--- a/milestone6/index.html
+++ b/milestone6/index.html
@@ -34,7 +34,7 @@
         </div>
         <section id = "middle_bar">
             <p>
-                Welcome! Your daily dose of coding waits below.
+                Welcome! Your daily dose of coding awaits below.
             </p>
             <p>
                 <mark id="ellipsis">. . .</mark>
