--- a/utahtech10/shop.html
+++ b/utahtech10/shop.html
@@ -9,7 +9,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body onload="alert('Today only - 10% off on a weekend - coupon code TrailBlazers');">
     <div id="wrapper">
         <div id="bluebar"></div>
         <div id="greybar"></div>
