--- a/utahtech10/alumni.html
+++ b/utahtech10/alumni.html
@@ -10,9 +10,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <script> 
         function validateForm() {
-        if (document.forms[0].myEmail.value == "" ) {
-            alert("Please enter an e-mail address.");
-            return false;
+            if (document.forms[0].myEmail.value == "" ) {
+                alert("Please enter an e-mail address.");
+                return false;
             } // end if
             return true;
         } // end function validateForm
@@ -40,14 +40,16 @@
             <h2>Join Alumni Mailing List</h2>
                 <h3>Request Alumni Newsletter</h3>
             <p>Required information is marked with an asterisk (*).</p>
-            <form method="post" onsubmit="return validateForm();" action="https://kearl.net/se1400/mail.php">
+            <form method="post"
+                onsubmit="return validateForm();"
+                action="https://kearl.net/se1400/mail.php">
                 <label for="myFName">First Name:</label>
                     <input type="text" name="myFName" id="myFName">
 
                 <label for="myLName">Last Name:</label>
                     <input type="text" name="myLName" id="myLName">
 
-                <label for="myEmail">*E-mail:</label>
+                <label for="myEmail">* E-mail:</label>
                     <input type="text" name="myEmail" id="myEmail">
 
                 <label for="myPhone">Phone:</label>
